@@ -285,6 +285,9 @@
 /* "Use threads" */
 #undef USE_THREADS
 
+/* "Check cause minix lacks this" */
+#undef HAVE_SETPGID
+
 /* Define to `__inline__' or `__inline' if that's what the C compiler
    calls it, or to nothing if 'inline' is not supported under any name.  */
 #ifndef __cplusplus
